--- a/config/locales/ua.yml
+++ b/config/locales/ua.yml
@@ -57,6 +57,7 @@ ua:
               confirmation: "пароль не співпадає"
             current_password:
               blank: "не може бути пустим"
+              invalid: "неправильний"
         test_setting:
           attributes:
             name:
@@ -109,7 +110,7 @@ ua:
           back: "Назад"
       edit:
         h_edit: "Редагування профілю"
-        choose_avatar: "Видалити фото"
+        choose_avatar: "Вибрати фото"
         avatar: "Фото"
         leave_blank: "(Залиште пустим якщо не хочете змінювати)"
         we_need_password: "(нам потрібен ваш поточний пароль для підтвердження ваших змін)"
@@ -324,19 +325,23 @@ ua:
         h_news_list: "Список новин"
         buttons:
           back: "Назад"
-
       form:
         mark_if_right: "Позначте, якщо новина головна"
-        choose_photos: "Виберіть інші фотографії"
-        choose_primary_photo: "Виберіть головну фотографію"
+        choose_photos: "Виберіть фотографії і поставте позначку біля тієї, яка має відображатися першою"
         buttons:
           submit: "Зберегти"
-
+          add_photo: "Додати фотографію"
+      image_fields:
+        buttons:
+          remove: "Видалити"
       edit:
+        mark_if_right: "Позначте, якщо новина головна"
+        choose_photos: "Виберіть фотографії"
         h_edit_new: "Редагування новини"
         buttons:
           back: "Назад"
-
+          submit: "Зберегти"
+          add_photo: "Додати фотографію"
       tidings:
         name: "Назва"
         text: "Текст"
